# 21_OOPPractice_CPP

./: .gitignore
Basics/: 1.C++Basics.cpp  2.1ClassAndObject_Round.cpp  2.2ClassAndObject_Matrix.cpp  3.InheritAndDerive.cpp  4.IOStream.cpp  5.1Overloading_VirtualFunction.cpp  5.2Overloading_Operator.cpp
CourseProject/data/: cart_info.json  order_info.json  product_info.json  user_info.json
CourseProject/e-commerce_plat1/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  product.cpp  product.h  productmanager.cpp  productmanager.h  user.cpp  user.h
CourseProject/e-commerce_plat2/: CMakeLists.txt  accountmanager.h  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  product.h  productmanager.cpp  productmanager.h  transactionmanager.cpp  transactionmanager.h
CourseProject/e-commerce_plat3_client/: CMakeLists.txt  accountmanager.cpp  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  productmanager.h  quantitywidget.cpp  quantitywidget.h  tcpclient.cpp  tcpclient.h  transactionmanager.cpp  user.cpp
CourseProject/e-commerce_plat3_server/: CMakeLists.txt  product.h  tcpserver.cpp  tcpserver.h  user.h
